Bug 72859 - [IVB] arb_sample_shading-builtin-gl-sample-id piglit test regressed
Summary: [IVB] arb_sample_shading-builtin-gl-sample-id piglit test regressed
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Ian Romanick
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-19 01:50 UTC by Anuj Phogat
Modified: 2014-01-07 12:03 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Anuj Phogat 2013-12-19 01:50:29 UTC
./bin/arb_sample_shading-builtin-gl-sample-id 8 -auto
Probe color at (0,0)
  Expected: 0.000000 1.000000 0.000000 1.000000
  Observed: 1.000000 0.000000 0.000000 1.000000
PIGLIT: {'result': 'fail' }


Bisect shows 83b83fb (mesa master) is the first bad commit.
commit 83b83fb9843456a231c60bcbac0594ebaf05dd4f
Author: Chris Forbes <chrisf@ijw.co.nz>
Date:   Sat Nov 30 10:03:10 2013 +1300

    i965/Gen7: Allow CMS layout for multisample textures
    
    Now that all the pieces are in place, this should provide
    a nice performance boost for apps using multisample textures.
    
    Signed-off-by: Chris Forbes <chrisf@ijw.co.nz>
    Reviewed-by: Paul Berry <stereotype441@gmail.com>
    Reviewed-by: Kenneth Graunke <kenneth@whitecape.org>
Comment 1 Chris Forbes 2013-12-19 04:19:33 UTC
Affects HSW as well.
Comment 2 Chris Forbes 2014-01-07 12:03:19 UTC
Fixed in master.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.